--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,8 @@ repositories {
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'Main'
-applicationName = 'app'
-
 dependencies {
-    implementation 'org.postgresql:postgresql:42.2.16'
+    compile "com.oracle.ojdbc:ojdbc8:19.3.0.0"
     compile 'com.sparkjava:spark-core:2.9.2'
     compile 'org.slf4j:slf4j-simple:1.7.28'
     testCompile group: 'junit', name: 'junit', version: '4.12'
