--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,13 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 dependencies {
-    compile "com.oracle.ojdbc:ojdbc8:19.3.0.0"
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
     compile 'com.sparkjava:spark-core:2.9.2'
     compile 'org.slf4j:slf4j-simple:1.7.28'
     testCompile group: 'junit', name: 'junit', version: '4.12'
