--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
     compile 'com.sparkjava:spark-core:2.9.2'
     compile 'org.slf4j:slf4j-simple:1.7.28'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
